syntax = "proto3";

package data;

option go_package = "./foodpb";

message Food {
  string id = 1;
  string name = 2;
  double protein = 3;
  double fat = 4;
  double carbs = 5;
}

message CreateFoodRequest {
  Food food = 1;
}

message CreateFoodResponse {
}

message ReadFoodRequest {
  string food_id = 1;
}

message ReadFoodResponse {
  Food food = 1;
}

message UpdateFoodRequest {
  Food food = 1;
}

message UpdateFoodResponse {
  Food food = 1;
}

message DeleteFoodRequest {
  string food_id = 1;
}

message DeleteFoodResponse {
}

message ListFoodRequest {
  string food_id = 1;
}

message ListFoodResponse {
  Food food = 1;
}

/**
 ** FoodService provides a way to CRUD food nutrient database from MEXT.
 ** Each RPC may return Internal but it is not listed in the [ERRORS] section for brevity.
 */
service FoodService {
  rpc CreateFood (CreateFoodRequest) returns (CreateFoodResponse);
  rpc ReadFood (ReadFoodRequest) returns (ReadFoodResponse);
  rpc UpdateFood (UpdateFoodRequest) returns (UpdateFoodResponse);
  rpc DeleteFood (DeleteFoodRequest) returns (DeleteFoodResponse);
  rpc ListFoods (stream ListFoodRequest) returns (stream ListFoodResponse){};
}
/**
 ** the returned message may be empty.
 ** [ERRORS]
 ** - NotFound:
 **   - the food specified by its ID is not found in the system
 */

message Menu {
  string id = 1;
  string name = 2;
  double protein = 3;
  double fat = 4;
  double carbs = 5;
}

message CreateMenuRequest {
  Menu menu = 1;
}

message CreateMenuResponse {
}

message ReadMenuRequest {
  string menu_id = 1;
}

message ReadMenuResponse {
  Menu menu = 1;
}

message UpdateMenuRequest {
  Menu menu = 1;
}

message UpdateMenuResponse {
  Menu menu = 1;
}

message DeleteMenuRequest {
  string menu_id = 1;
}

message DeleteMenuResponse {
}

message ListMenuRequest {
  string menu_id = 1;
}

message ListMenuResponse {
  Menu menu = 1;
}

message ListAllMenusRequest {

}

message ListAllMenusResponse {
  Menu menu = 1;
}

/**
 ** MenuService provides a way to CRUD menu database provided by stores.
 ** Each RPC may return Internal but it is not listed in the [ERRORS] section for brevity.
 */
service MenuService {
  rpc CreateMenu (CreateMenuRequest) returns (CreateMenuResponse);
  rpc ReadMenu (ReadMenuRequest) returns (ReadMenuResponse);
  rpc UpdateMenu (UpdateMenuRequest) returns (UpdateMenuResponse);
  rpc DeleteMenu (DeleteMenuRequest) returns (DeleteMenuResponse);
  // ListMenu only returns menus specified by  requested IDs.
  rpc ListMenu (stream ListMenuRequest) returns (stream ListMenuResponse){};
  // ListAllMenus returns all the menus created.
  rpc ListAllMenus (ListAllMenusRequest) returns (stream ListAllMenusResponse){};
}
/**
 ** the returned message may be empty.
 ** [ERRORS]
 ** - NotFound:
 **   - the menu specified by its ID is not found in the system
 */